<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Help">

    <ImageView
        android:id="@+id/ivHelp"
        android:contentDescription="@string/header"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="5sp"
        android:src="@drawable/security" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivHelp"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/what_we_do_head"
        android:textColor="@color/app"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/whatWeDo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/what_we_do"
        android:textColor="?android:textColorPrimary" />

    <TextView
        android:id="@+id/contactUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30sp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/contact_us"
        android:textColor="@color/app"
        android:textSize="18sp" />

</RelativeLayout>