<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.AddContact">

    <Button
        android:id="@+id/addVia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Text"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/oval"
        android:drawableEnd="@drawable/ic_baseline_add_ic_call_24"
        android:text="@string/add_from_contacts"
        android:textAllCaps="false"
        android:textColor="?android:textColorSecondary" />

    <ImageView
        android:id="@+id/ivAdd"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-15sp"
        android:src="@drawable/surv"
        android:contentDescription="@string/header" />

    <TextView
        android:id="@+id/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivAdd"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10sp"
        android:fontFamily="@font/poppins"
        android:text="@string/you_are_safe"
        android:textColor="?android:textColorPrimary"
        android:textSize="22sp"
        android:textStyle="italic|bold" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addVia"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="50sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="name"
        android:backgroundTint="@color/grey"
        android:ems="15"
        android:fontFamily="@font/poppins"
        android:hint="@string/name_of_the_contact"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="?android:textColorPrimary"
        android:textColorHint="?android:textColorTertiary" />

    <EditText
        android:autofillHints="name"
        android:id="@+id/etRelation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etName"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="50sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/grey"
        android:ems="15"
        android:fontFamily="@font/poppins"
        android:hint="@string/relation"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="?android:textColorPrimary"
        android:textColorHint="?android:textColorTertiary" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRelation"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="50sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="phone"
        android:backgroundTint="@color/grey"
        android:ems="15"
        android:fontFamily="@font/poppins"
        android:hint="@string/number"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:minLines="1"
        android:padding="10dp"
        android:textColor="?android:textColorPrimary"
        android:textColorHint="?android:textColorTertiary" />

    <EditText
        android:id="@+id/etOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNumber"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="50sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="postalCode"
        android:backgroundTint="@color/grey"
        android:ems="15"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_otp"
        android:inputType="phone"
        android:maxLength="4"
        android:maxLines="1"
        android:minLines="1"
        android:padding="10dp"
        android:textColor="?android:textColorPrimary"
        android:textColorHint="?android:textColorTertiary" />

    <TextView
        android:id="@+id/tvAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etOtp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="15sp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/otp_will_be_auto_verified"
        android:textColor="?android:textColorPrimary"
        android:textSize="11sp"
        app:drawableRightCompat="@drawable/ic_baseline_check_24" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/oval"
        android:fontFamily="@font/poppins"
        android:text="@string/add_contact"
        android:textAllCaps="false"
        android:textColor="?android:textColorSecondary"
        android:textSize="20sp" />

</RelativeLayout>