<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.Login">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_above="@id/tvLogin"
        android:layout_centerInParent="true"
        android:layout_marginBottom="-10dp"
        android:src="@drawable/login"
        android:contentDescription="@string/header" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/etEmailLayout"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/poppins"
        android:text="@string/you_are_safe"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="italic|bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmailLayout"
        app:hintAnimationEnabled="true"
        android:hint="@string/email"
        android:focusable="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:outlineProvider="paddedBounds"
        android:fadingEdge="vertical"
        android:requiresFadingEdge="vertical"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:labelFor="@id/etEmailLogin"
        android:layout_centerInParent="true"
        android:paddingHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailLogin"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmailLayout"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fadingEdge="vertical"
        android:focusable="true"
        android:hint="@string/password"
        android:labelFor="@id/etEmailLogin"
        android:outlineProvider="paddedBounds"
        android:paddingHorizontal="10dp"
        android:requiresFadingEdge="vertical"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:hintAnimationEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/app">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/poppins"
        android:text="@string/forgot_password"
        android:textColor="?android:colorPrimary" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/oval"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="?android:textColorSecondary"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="50sp"
        android:layout_marginBottom="29dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_gravity="center"
            android:text="New User?"
            android:textColor="?android:textColorPrimary"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:text="Sign up now."
            android:textColor="?android:colorPrimary"
            tools:ignore="HardcodedText" />

    </LinearLayout>

</RelativeLayout>